// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineDeploymentTable should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 2.5rem;
"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
      >
        <mock-styled.div>
          <mock-styled.div>
            Release Type
          </mock-styled.div>
          <mock-styled.div>
            Created
          </mock-styled.div>
          <mock-styled.div>
            Status
          </mock-styled.div>
          <mock-styled.div>
            Version
          </mock-styled.div>
          <mock-styled.div>
            Currently Deployed
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css."
              style="font-size: 1.2rem;"
            >
              <svg
                style="font-size: 1.2rem;"
              />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Release Type"
              >
                Unknown
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Created"
              >
                20 Apr 2022 02:30:26
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Status"
              >
                <mock-styled.span
                  classname="mock-css."
                />
                Succeeded
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Version"
              />
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Currently Deployed"
              >
                Deployed
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
                >
                  <mock-styled.div>
                    Task
                  </mock-styled.div>
                  <mock-styled.div>
                    Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Started
                  </mock-styled.div>
                  <mock-styled.div>
                    Finished
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
                >
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      Download Source
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname="mock-css."
                      />
                      Succeeded
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      -
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      -
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
                >
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      Install
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname="mock-css."
                      />
                      Succeeded
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      -
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      -
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
                >
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      Build
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname="mock-css."
                      />
                      Succeeded
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      -
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      -
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
                >
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      Deploy
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      <mock-styled.span
                        classname="mock-css."
                      />
                      Succeeded
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      -
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div>
                      -
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <div
                class="mock-css.
  margin-top: 1rem;
"
              >
                <mock-styled.button
                  classname="mock-css."
                  disabled="true"
                >
                  <mock-styled.div />
                  Logs Expired
                </mock-styled.button>
              </div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          data-testid="back-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.button
          data-testid="forward-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  margin-bottom: 2.5rem;
"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
    >
      <mock-styled.div>
        <mock-styled.div>
          Release Type
        </mock-styled.div>
        <mock-styled.div>
          Created
        </mock-styled.div>
        <mock-styled.div>
          Status
        </mock-styled.div>
        <mock-styled.div>
          Version
        </mock-styled.div>
        <mock-styled.div>
          Currently Deployed
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="mock-css."
            style="font-size: 1.2rem;"
          >
            <svg
              style="font-size: 1.2rem;"
            />
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Release Type"
            >
              Unknown
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Created"
            >
              20 Apr 2022 02:30:26
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Status"
            >
              <mock-styled.span
                classname="mock-css."
              />
              Succeeded
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Version"
            />
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Currently Deployed"
            >
              Deployed
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css."
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
              >
                <mock-styled.div>
                  Task
                </mock-styled.div>
                <mock-styled.div>
                  Status
                </mock-styled.div>
                <mock-styled.div>
                  Started
                </mock-styled.div>
                <mock-styled.div>
                  Finished
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
              >
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    Download Source
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname="mock-css."
                    />
                    Succeeded
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    -
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    -
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
              >
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    Install
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname="mock-css."
                    />
                    Succeeded
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    -
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    -
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
              >
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    Build
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname="mock-css."
                    />
                    Succeeded
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    -
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    -
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  grid-template-columns: repeat(4, 1fr);
"
              >
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    Deploy
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    <mock-styled.span
                      classname="mock-css."
                    />
                    Succeeded
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    -
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div>
                    -
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <div
              class="mock-css.
  margin-top: 1rem;
"
            >
              <mock-styled.button
                classname="mock-css."
                disabled="true"
              >
                <mock-styled.div />
                Logs Expired
              </mock-styled.button>
            </div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.input
          value="1"
        />
         of 
        1
      </mock-styled.div>
      <mock-styled.button
        data-testid="back-button"
        type="button"
      >
        <mock-styled.span
          classname=""
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
      <mock-styled.button
        data-testid="forward-button"
        type="button"
      >
        <mock-styled.span
          classname=""
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelineDeploymentTable should match snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
